# business-assistant-web-plugin

./: .env.example  .gitignore  CLAUDE.md  README.md  install.bat  pyproject.toml  update.bat
src/business_assistant_web/: __init__.py  config.py  constants.py  plugin.py  service.py
tests/: conftest.py  test_config.py  test_plugin_registration.py  test_service.py
tools/: tests.bat
